Fix small text on mobile

--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@
     body {
         background-color: white;
         margin: 0% 5%;
-        font-size: 36px;
+        font-size: 48px;
         font-family: "EB Garamond", serif;
         padding-bottom: 80px;
     }
@@ -245,7 +245,7 @@
         color: var(--spaceblue);
         display: flex;
         justify-content: center;
-        font-family: "Outfit", sans-serif;
+        font-family: "Outfit", sa36ns-serif;
         font-weight: 300;
         font-size: 36px;
         margin-top: 40px;
@@ -264,7 +264,7 @@
     }
 
     p {
-        line-height: 56px;
+        line-height: 72px;
         margin-bottom: 42px;
     }
 
